# bastion

./: Cargo.toml  README.md  workload.json
.github/workflows/: ci.yml  deploy.yml  release.yml
src/: lib.rs  page.html
