[package]
name = "bastion-term"
version = "0.1.1"
edition = "2021"
description = "Block-aware web terminal: persistent shells, OSC 133 command segmentation, xterm.js front-end."
license = "MIT"
repository = "https://github.com/devopsdefender/bastion"
readme = "README.md"
keywords = ["terminal", "shell", "web", "xterm", "osc133"]
categories = ["command-line-utilities", "web-programming"]

[lib]
name = "bastion"
path = "src/lib.rs"

[[bin]]
name = "bastion"
path = "src/bin/bastion.rs"

[dependencies]
axum = { version = "0.8", features = ["ws", "macros"] }
base64 = "0.22"
futures-util = "0.3"
libc = "0.2"
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "io-util", "net", "signal"] }
uuid = { version = "1", features = ["v4"] }
vte = "0.13"

[[example]]
name = "standalone"
path = "examples/standalone.rs"
